--- a/.github/workflows/automation-android.yml
+++ b/.github/workflows/automation-android.yml
@@ -10,7 +10,7 @@ on:
     outputs:
       message:
         description: Message of QA result
-        value: ${{ jobs.complete.outputs.message || jobs.fail.outputs.message }}
+        value: ${{ jobs.report.outputs.message }}
   workflow_dispatch:
     inputs:
       reference:
@@ -35,30 +35,25 @@ jobs:
         run: |
           echo qa
 
-  complete:
+  report:
     runs-on: ubuntu-latest
 
     needs:
+      - build
       - qa
-    if: ${{ needs.qa.result == 'success' }}
+
+    if: always() && (contains(needs.*.result, 'success') || contains(needs.*.result, 'failure'))
     outputs:
-      message: ${{ steps.report.outputs.message }}
+      message: ${{ steps.report-complete.outputs.message || steps.report-fail.outputs.message }}
     steps:
       - name: Report complete
-        id: report
+        id: report-complete
+        if: needs.qa.result == 'success'
         run: |
-          echo "message='QA is completed!'" >> $GITHUB_OUTPUT
-        
-  fail:
-    runs-on: latest-ubuntu
+          echo "message=QA is completed!" >> $GITHUB_OUTPUT
 
-    needs:
-      - qa
-    if: ${{ needs.qa.result == 'failure' }}
-    outputs:
-      message: ${{ steps.report.outputs.message }}
-    steps:
       - name: Report fail
-        id: report
+        id: report-fail
+        if: needs.qa.result != 'success'
         run: |
-          echo "message='QA is failed!'" >> $GITHUB_OUTPUT
+          echo "message=QA is failed!" >> $GITHUB_OUTPUT
